Add new image assets: location.png and logo.png
- Added location.png to the images directory.
- Added logo.png to the images directory.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,63 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/output.css">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="src/output.css" />
+    <title>Landing page</title>
+  </head>
+  <body>
+    <header id="#home">
+      <nav class="container">
+        <img src="src/images/logo.png" alt="logo.png" />
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#">Properties</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section id="banner">
+      <div class="container">
+        <div class="banner">
+          <div class="bannerContent">
+            <h1>Temukan Hunian Keluarga Sesuai Keinginanmu</h1>
+            <p>
+              Menyediakan hunian bagi keluarga anda dengan varian pilihan dan
+              lokasi yang strategis di kota anda dengan cara yang lebih mudah.
+            </p>
+            <div class="bannerSearch">
+              <div class="position">
+                <input
+                  type="text"
+                  placeholder="Search location, properties, residental group"
+                />
+                <img src="src/images/location.png" alt="location.png" />
+              </div>
+              <button class="searchBtn">Search</button>
+            </div>
+          </div>
+          <img
+            src="src/images/bannerImg.png"
+            alt="bannerImg.png"
+            class="bannerImg"
+          />
+        </div>
+      </div>
+    </section>
+    <section id="about">
+      <div class="container">
+        <div class="about">
+          <h3>Tahapan Pembelian Properti yang Mudah dan Cepat</h3>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
