Refactor HTML structure and update CSS for header, banner, and about sections

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Landing page</title>
   </head>
   <body>
+    <!-- Header Part Start  -->
     <header id="#home">
       <nav class="container">
         <img src="src/images/logo.png" alt="logo.png" />
@@ -24,6 +25,9 @@
         </ul>
       </nav>
     </header>
+    <!-- Header Part End  -->
+
+    <!-- Banner Part Start  -->
     <section id="banner">
       <div class="container">
         <div class="banner">
@@ -52,12 +56,17 @@
         </div>
       </div>
     </section>
+    <!-- Banner Part End  -->
+
+    <!-- About Part Start  -->
     <section id="about">
       <div class="container">
         <div class="about">
           <h3>Tahapan Pembelian Properti yang Mudah dan Cepat</h3>
+          <div class="aboutContent"></div>
         </div>
       </div>
     </section>
+    <!-- About Part End  -->
   </body>
 </html>
