Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="src/output.css" />
     <title>Landing page</title>
   </head>
@@ -20,8 +27,8 @@
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#">Properties</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#properties">Properties</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -63,10 +70,131 @@
       <div class="container">
         <div class="about">
           <h3>Tahapan Pembelian Properti yang Mudah dan Cepat</h3>
-          <div class="aboutContent"></div>
+          <div class="aboutContent">
+            <div class="aboutContentText">
+              <div class="aboutContentPosition"></div>
+              <div class="aboutContentTextHeader">
+                <h4>Pilih Properti</h4>
+                <span>01</span>
+              </div>
+              <p>
+                Cari properti yang diinginkan sesuai dengan kriteria anda dan
+                keluarga. Cara memilih properti yang bijak dapat anda baca lebih
+                lanjut di sini
+              </p>
+              <a href="#"
+                ><span>Baca lebih Lanjut</span
+                ><i class="fa-solid fa-arrow-right"></i
+              ></a>
+            </div>
+            <div class="aboutContentText">
+              <div class="aboutContentPosition"></div>
+              <div class="aboutContentTextHeader">
+                <h4>Proses Booking</h4>
+                <span>02</span>
+              </div>
+              <p>
+                Cari properti yang diinginkan sesuai dengan kriteria anda dan
+                keluarga. Cara memilih properti yang bijak dapat anda baca lebih
+                lanjut di sini
+              </p>
+              <a href="#"
+                ><span>Baca lebih Lanjut</span
+                ><i class="fa-solid fa-arrow-right"></i
+              ></a>
+            </div>
+            <div class="aboutContentText">
+              <div class="aboutContentPosition"></div>
+              <div class="aboutContentTextHeader">
+                <h4>KPR dan Sertifikasi</h4>
+                <span>03</span>
+              </div>
+              <p>
+                Pembiayaan KPR untuk pembeli rumah dengan skema pembiayaan jika
+                diperlukan dan dilanjutkan proses sertifkasi HGB.
+              </p>
+              <a href="#"
+                ><span>Baca lebih Lanjut</span
+                ><i class="fa-solid fa-arrow-right"></i
+              ></a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
     <!-- About Part End  -->
+
+    <!-- PropertiesOne Part Start  -->
+    <section id="propertiesOne">
+      <div class="container">
+        <div class="propertiesOne">
+          <h4>Pilihan konsumen</h4>
+          <h3>Residen Favorit</h3>
+          <div class="propertiesOneFlex">
+            <img
+              src="src/images/propertiesOneImg.png"
+              alt="propertiesOneImg.png"
+            />
+            <div class="propertiesOneContent">
+              <h2>Bangunan yang dirancang oleh Aristektur Handal</h2>
+              <p>
+                Tanpa diragukan, properti yang disediakan dalam webiste kami
+                merupakan hasil kerjasama secara profesional dengan para
+                Arsitektur ternama dan Developer yang terpercaya.
+              </p>
+              <div class="propertiesOneContentBtn">
+                <button>
+                  <i class="fa-solid fa-phone"></i>
+                  <span>Hubungi Kami</span>
+                </button>
+                <button>Explore lebih banyak</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- PropertiesOne Part End  -->
+
+    <!-- PropertiesTwo Part Start  -->
+    <section id="propertiesTwo">
+      <div class="container">
+        <div class="propertiesTwo">
+          <h4>Pilihan konsumen</h4>
+          <h3>Residen Favorit</h3>
+          <div class="propertiesTwoFlex">
+            <div class="propertiesTwoContent">
+              <img src="src/images/propertiesTwoImg1.png" alt="propertiesTwoImg1.png">
+              <h5>Magnolia Surabaya</h5>
+              <p>
+                Jl. Gatot Subroto No.KM.6,8, RT.001/RW.008, Jatake, Kec.
+                Jatiuwung, Kota Tangerang, Banten 15136
+              </p>
+            </div>
+            <div class="propertiesTwoContent">
+              <img src="src/images/propertiesTwoImg2.png" alt="propertiesTwoImg2.png">
+              <h5>Magnolia Surabaya</h5>
+              <p>
+                Jl. Gatot Subroto No.KM.6,8, RT.001/RW.008, Jatake, Kec.
+                Jatiuwung, Kota Tangerang, Banten 15136
+              </p>
+            </div>  
+            <div class="propertiesTwoContent">
+              <img
+                src="src/images/propertiesTwoImg3.png"
+                alt="propertiesTwoImg3.png"
+              />
+              <h5>South Grove</h5>
+              <p>
+                1 No.1, RT.1/RW.1, Lb. Bulus, Kec. Cilandak, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta 12440
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- PropertiesTwo Part End  -->
+    <!-- PropertiesTwo Part End  -->
+    <!-- PropertiesTwo Part End  -->
   </body>
 </html>
