Add footer logo image to the project

--- a/index.html
+++ b/index.html
@@ -164,7 +164,10 @@
           <h3>Residen Favorit</h3>
           <div class="propertiesTwoFlex">
             <div class="propertiesTwoContent">
-              <img src="src/images/propertiesTwoImg1.png" alt="propertiesTwoImg1.png">
+              <img
+                src="src/images/propertiesTwoImg1.png"
+                alt="propertiesTwoImg1.png"
+              />
               <h5>Magnolia Surabaya</h5>
               <p>
                 Jl. Gatot Subroto No.KM.6,8, RT.001/RW.008, Jatake, Kec.
@@ -172,13 +175,16 @@
               </p>
             </div>
             <div class="propertiesTwoContent">
-              <img src="src/images/propertiesTwoImg2.png" alt="propertiesTwoImg2.png">
+              <img
+                src="src/images/propertiesTwoImg2.png"
+                alt="propertiesTwoImg2.png"
+              />
               <h5>Magnolia Surabaya</h5>
               <p>
                 Jl. Gatot Subroto No.KM.6,8, RT.001/RW.008, Jatake, Kec.
                 Jatiuwung, Kota Tangerang, Banten 15136
               </p>
-            </div>  
+            </div>
             <div class="propertiesTwoContent">
               <img
                 src="src/images/propertiesTwoImg3.png"
@@ -186,7 +192,8 @@
               />
               <h5>South Grove</h5>
               <p>
-                1 No.1, RT.1/RW.1, Lb. Bulus, Kec. Cilandak, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta 12440
+                1 No.1, RT.1/RW.1, Lb. Bulus, Kec. Cilandak, Kota Jakarta
+                Selatan, Daerah Khusus Ibukota Jakarta 12440
               </p>
             </div>
           </div>
@@ -194,7 +201,60 @@
       </div>
     </section>
     <!-- PropertiesTwo Part End  -->
-    <!-- PropertiesTwo Part End  -->
-    <!-- PropertiesTwo Part End  -->
+
+    <!-- Contact Part Start  -->
+    <section id="contact">
+      <div class="container">
+        <div class="contact">
+          <div class="contactContent">
+            <h3>Hubungi Kami</h3>
+            <div class="contactNum">
+              <div class="call">
+                <div class="callFlex">
+                  <i class="fa-solid fa-phone"></i>
+                  <div class="callFlexNumber">
+                    <h6>Call</h6>
+                    <span>+6281232936733</span>
+                  </div>
+                </div>
+                <div class="callBtn">
+                  <button>Call Now</button>
+                </div>
+              </div>
+              <div class="call">
+                <div class="callFlex">
+                  <i class="fa-solid fa-phone"></i>
+                  <div class="callFlexNumber">
+                    <h6>Call</h6>
+                    <span>+6281232936733</span>
+                  </div>
+                </div>
+                <div class="callBtn">
+                  <button>Call Now</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <img src="src/images/award.png" alt="award.png" />
+        </div>
+      </div>
+    </section>
+    <!-- Contact Part End  -->
+
+    <!-- Footer Part Start  -->
+     <footer>
+      <div class="container">
+        <div class="footer">
+          <img src="src/images/footerLogo.png" alt="footerLogo.png">
+          <ul>
+            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-tumblr"></i></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+          </ul>
+        </div>
+      </div>
+     </footer>
+    <!-- Footer Part End  -->
   </body>
 </html>
